fixed UI issue of spacing between 2 section in about page

--- a/src/App.css
+++ b/src/App.css
@@ -1191,6 +1191,7 @@ main {
  */
 
 .service {
+  margin-top: 25px;
   margin-bottom: 35px;
 }
 
